<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Socretary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>

    <string name="dialog_frequency_text">Wie oft möchtest du mit der Person in Kontakt treten?</string>
    <string name="dialog_frequency_title">Kontatkhäufigkeit</string>

    <string name="dialog_birthday_title">Geburtstag</string>

    <string name="dialog_address_text">Welche Adresse soll hinterlegt werden?</string>
    <string name="dialog_address_title">Adresse</string>

    <string name="number_prompt">Damit deine Freunde feststellen können, ob Du in ihrer Reichweite bist, brauchen wir deine Handynummer.</string>
    <string name="number_saved">Deine Nummer wurde gespeichert.</string>
    <string name="number_abort">Deine Handynummer ist notwendig, damit du mit deinen Freunden kommunizieren kannst!</string>
    <string name="warning_number_empty">Bitte gib auf der Übersichtsseite deine Handynummer ein, damit diese an das Backend übermittelt werden kann.</string>

    <string name="notContactedYet">Ihr habt ja noch gar nicht kommuniziert...</string>

    <!-- KontaktTabs -->
    <string name="TabDetails">Details</string>
    <string name="TabHistory">Verlauf</string>
    <string name="TabStats">Statistik</string>

    <!-- KontaktTabDetails -->
    <string name="address">Adresse</string>
    <string name="number">Telefonnummer</string>
    <string name="birthday">Geburtstag</string>
    <string name="TemplateSMS">SMS Vorlagen</string>
    <string name="NoTemplateSMS">Für diesen Kontakt wurden keine SMS Vorlagen ausgewählt.</string>
    <string name="SendTemplateSMSTitle">SMS versenden</string>
    <string name="SendTemplateSMSText">Diese Nachricht an %s verschicken?</string>
    <string name="AbortSendingSMS">SMS Versand wurde abgebrochen.</string>
    <string name="SMSTemplatesToUse">Anzuzeigende Vorlagen</string>
    <string name="Birthday_past">vor %s Tagen</string>
    <string name="Birthday_future">in %s Tagen</string>
    <string name="Birthday_today">heute!</string>

    <!-- Wochentage -->
    <string name="Monday">Montag</string>
    <string name="Tuesday">Dienstag</string>
    <string name="Wednesday">Mittwoch</string>
    <string name="Thursday">Donnerstag</string>
    <string name="Friday">Freitag</string>
    <string name="Saturday">Samstag</string>
    <string name="Sunday">Sonntag</string>

    <!-- Kommunikationswege -->
    <string name="Phone">Anruf</string>
    <string name="Mail">E-Mail</string>
    <string name="Messenger">Nachricht</string>
    <string name="Personal">Persönliches Treffen</string>
    <string name="SocialNetwork">Soziales Netzwerk</string>

    <string name="Inbound">Inbound</string>
    <string name="Outbund">Outbund</string>
    <string name="Mutual">Mutual</string>
    <string name="Coincidence">Coincidence</string>

    <!-- Allgemeine Meldungen -->
    <string name="NoHistory">Du hast mit diesem Kontakt noch nicht kommuniziert.</string>
    <string name="AreYouSure">Bist du dir sicher?</string>
    <string name="NoAdressTitle">Keine Adresse gefunden</string>
    <string name="NoAdress">Möchtest du jetzt eine Adresse hinzufügen?</string>

    <!-- OptionsMenu in der Kontaktansicht -->
    <string name="OptionsAddEncounter">Eintrag hinzufügen</string>
    <string name="OptionsRemoveContact">Kontakt entfernen</string>

    <!-- EncounterDialog -->
    <string name="HintType"></string>
    <string name="HintDirection">Richtung</string>
    <string name="HintLength">Dauer</string>
    <string name="HintDate">Datum</string>
    <string name="HintTime">Uhrzeit</string>

    <string name="ErrorNoDate">Du hast kein Datum angegeben.</string>
    <string name="ErrorNoTime">Du hast keine Uhrzeit angegeben.</string>
    <string name="ErrorNoLength">Du hast keine Dauer angegeben.</string>

    <string name="dialog_skip">Später</string>
	<string name="dialog_yes">Ja</string>
	<string name="dialog_no">Nein</string>
	<string name="dialog_cancel">Abbrechen</string>
	<string name="dialog_ok">OK</string>
    <string name="dialog_retry">Wiederholen</string>
    <string name="dialog_patience">Bitte warten</string>

    <string name="hint_street">Straße</string>
    <string name="hint_number">Nr</string>
    <string name="hint_postCode">PLZ</string>
    <string name="hint_city">Stadt</string>
    <string name="hint_country">Land</string>
    <string name="hint_region">Bundesland</string>

    <!-- TextTemplate Input Dialog -->
    <string name="TemplateTextInputText">Hinzufügen einer neuen SMS Vorlage.</string>
    <string name="TemplateTextInputHint">Nachricht…</string>
    <string name="ErrorEmptyInput">Du musst schon einen Text eingeben…</string>

    <!-- TextTemplate Remove Dialog -->
    <string name="TempleTextRemoveTitle">Vorlagen entfernen</string>

    <!-- Items für den NavigationDrawer -->
    <string-array name="drawer_list">
        <item>Übersicht</item>
        <item>Einstellungen</item>
        <item>SMS Vorlagen</item>
		<item>Statistiken</item>
    </string-array>

    <!-- Einstellungen -->
    <string name="Pref_history_title">Verlauf einlesen</string>
    <string name="Pref_history_sms">Nachrichten</string>
    <string name="Pref_history_calls">Anrufe</string>
    <string name="Pref_vibrate_title">Vibration</string>
    <string name="Pref_notify_title">Benachrichtigung</string>
    <string name="Pref_notify">Benachrichtigungen erhalten</string>
    <string name="Pref_vibrate">Vibration bei Benachrichtigungen</string>
    <string name="Pref_fence_title">Distanz</string>
    <string name="Pref_fence">Umkreis um deine Freunde</string>
    <string name="Pref_loading_sms">Bitte habe einen Moment Geduld, während die SMS eingelesen werden.</string>
    <string name="Pref_loading_calls">Bitte habe einen Moment Geduld, während die Anrufe eingelesen werden.</string>
    <string name="Pref_loaded_calls">Anrufe wurden eingelesen</string>
    <string name="Pref_loaded_sms">SMS wurden eingelesen</string>
    <string name="Pref_licences">Open-Source-Lizenzen</string>
    <string name="Pref_misc_title">Sonstiges</string>

    <!-- Notifications -->
    <string name="Notify_loc_title">%s in deiner Nähe!</string>
    <string name="Notify_loc_txt" formatted="false">Dein Freund %s ist aktuell in deiner Nähe (%s m). Trefft euch doch mal!</string>
    <string name="Notification_LocationHome_Title">In der Nähe eines Freundes</string>
    <string name="Notification_action_visit">Besuchen</string>
    <string name="Notification_action_call">Anrufen</string>

    <!-- Location -->
    <string name="Location_acquiring_toast">Standort wird ermittelt</string>
    <string name="Location_acquired_accuracyLow_Title">Niedrige Genauigkeit</string>
    <string name="Location_acquired_accuracyLow_Msg1">Die Genauigkeit der Position beträgt </string>
    <string name="Location_acquired_accuracyLow_Msg2">m. Willst du diese Position versenden oder es erneut versuchen?</string>
	<string name="Location_acquired_accuracyHigh"></string>
	<string name="Location_retrying"></string>
	<string name="Location_confirm_send_message">Soll der Standort wirklich mit deinen Freunden geteilt werden?</string>
	<string name="Location_confirm_send_title">Standort teilen?</string>
    <string name="Location_saved_success">Standort wurde erfolgreich an das Backend übertragen</string>
    <string name="Location_saved_error">Bei der Übertragung an das Backend ist ein Fehler aufgetreten. Bitte später erneut versuchen.</string>

    <string name="Month_1_short">Jan</string>
    <string name="Month_2_short">Feb</string>
    <string name="Month_3_short">Mär</string>
    <string name="Month_4_short">Apr</string>
    <string name="Month_5_short">Mai</string>
    <string name="Month_6_short">Jun</string>
    <string name="Month_7_short">Jul</string>
    <string name="Month_8_short">Aug</string>
    <string name="Month_9_short">Sep</string>
    <string name="Month_10_short">Okt</string>
    <string name="Month_11_short">Nov</string>
    <string name="Month_12_short">Dez</string>

    <string name="Encounter_direction_inbound">Eingehend</string>
    <string name="Encounter_direction_outbound">Ausgehend</string>
    <string name="Encounter_direction_mutual">Gemeinsam</string>
    <string name="Encounter_direction_coincidence">Zufall</string>
    <string name="Encounter_means_personal">Persönlich</string>
    <string name="Encounter_means_phone">Telefon</string>
    <string name="Encounter_means_messenger">Messenger</string>
    <string name="Encounter_means_socialnetwork">Soziales Netzwerk</string>
    <string name="Encounter_means_mail">E-Mail</string>

	<string name="Stats_title_perMonth">Monatliche Aktivität</string>
	<string name="Stats_title_direction">Kommunikationsrichtung</string>
	<string name="Stats_title_means">Kommunikationsmittel</string>




</resources>
