<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/DialogStyle"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eT_adr_street"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="60dp"
            android:hint="@string/hint_street"
            android:inputType="textPostalAddress"/>

        <EditText
            android:id="@+id/eT_adr_number"
            android:layout_width="58dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="-58dp"
            android:hint="@string/hint_number"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/eT_adr_code"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_postCode"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/eT_adr_city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:hint="@string/hint_city"
            android:inputType="textAutoComplete"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/eT_adr_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_country"
        android:inputType="textAutoComplete"/>

    <EditText
        android:id="@+id/eT_adr_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_region"
        android:inputType="textAutoComplete"/>

</LinearLayout>