<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/DialogStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30sp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/etEncDialogDate"
            style="@style/DialogText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:hint="@string/HintDate"
            android:inputType="date"/>

        <TextView
            android:id="@+id/etEncDialogTime"
            style="@style/DialogText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight=".3"
            android:hint="@string/HintTime"
            android:inputType="time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Spinner
            android:id="@+id/spEncDialogType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"/>

        <TextView
            android:id="@+id/etEncDialogLength"
            style="@style/DialogText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight=".3"
            android:hint="@string/HintLength"
            android:inputType="time"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/spEncDialogDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"/>

</LinearLayout>