<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingEnd="10dp"
              android:paddingStart="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/number"/>

    <TextView
        android:id="@+id/tV_con_tab_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/birthday"/>

    <TextView
        android:id="@+id/tV_con_tab_birthday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/address"/>

    <TextView
        android:id="@+id/tV_con_tab_address1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/tV_con_tab_address2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/tV_con_tab_address3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/tV_con_tab_address4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="3dp"
        android:textSize="22sp"/>

</LinearLayout>